monitoring/prometheus/OAuth2-Proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy-prometheus
  namespace: infra
  labels:
    app.kubernetes.io/name: oauth2-proxy-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy-prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oauth2-proxy-prometheus
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.1.3
          ports:
            - name: oauth2
              containerPort: 4180
          args:
            - --config=/etc/oauth2-proxy.cfg
          volumeMounts:
            - name: oauth2-proxy-config
              mountPath: /etc/oauth2-proxy.cfg
              subPath: oauth2-proxy.cfg
      volumes:
        - name: oauth2-proxy-config
          configMap:
            name: oauth2-proxy-config
