monitoring/prometheus/OAuth2-Proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-prometheus-svc
  namespace: infra
  labels:
    app.kubernetes.io/name: oauth2-proxy-prometheus
spec:
  type: ClusterIP
  ports:
    - port: 4180
      targetPort: 4180
  selector:
    app.kubernetes.io/name: oauth2-proxy-prometheus
