monitoring/prometheus/OAuth2-Proxy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy-prometheus-ingresstls
  namespace: infra
  labels:
    app.kubernetes.io/name: oauth2-proxy-prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  rules:
    - host: prometheus.nariman.kz
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy-prometheus-svc
              servicePort: 4180
  tls:
    - secretName: nginx-tls-cert
      hosts:
        - prometheus.nariman.kz
